security(isolation): close T4 adversarial-pass grant-revocation/replay findings
Two confirmed T4 findings against this session's smart-proxy-isolation grant
path, fixed as one coherent mechanism spanning both layers:

Finding 1 (SubProcessLocalPolicyAdmin, T1): grant() was purely additive --
a broad ceiling stayed fully enforced after a narrower re-grant for the same
(scopePrincipals, digest) target, surviving refresh() and only expiring on
its own independent lease TTL. grant() now supersedes any prior LIVE grant
it itself installed for the same target (matched via the existing
PermissionGrant#impliesEquivalent, which compares only the selector, not
permission content) by calling LeasedPermissionGrant#cancel() on it --
strictly after the new install succeeds, so a ceiling-denied regrant attempt
never has the side effect of tearing down a still-valid different grant.

Secondary audit-blindness gap: getGrants() queried a codesource-free
synthetic ProtectionDomain, which a DigestGrant/URIGrant/CertificateGrant/
ClassLoaderGrant can never imply -- T3's own actual grant shape was silently
reported as absent. getGrants() now reads this backend's own live-install
index directly (the exact installed objects, isVoid() evaluated fresh),
independent of implies()-based domain matching.

Finding 2 (SubProcessGrantOrchestrator, T3): neither T1 nor T3 had any
freshness check on grant application -- resubmitting a byte-for-byte
identical applyVerdictCeiling call silently reinstated an already-expired
ceiling. Supersession alone cannot close this (once void, there is no live
prior grant left to cancel). applyVerdictCeiling now tracks, per exact
(targetKey, contentHash) pair, the signed RegistryVerdict timestamp of the
last verdict it successfully applied, and fails closed on any call whose
timestamp is not strictly newer -- before ever calling down into
PolicyAdmin.grant, so a replay never reaches T1. The generation only
advances after a successful grant, so an upstream failure (un